--- a/assests/stylesheets/main.css
+++ b/assests/stylesheets/main.css
@@ -29,3 +29,32 @@
   h1, h2, h3, h5, p {
     margin-bottom: 22px;
   }
+
+
+/*
+
+ Buttons
+
+ */
+
+ .btn {
+   border-radius: 5px;
+   display: inline-block;
+   margin: 0;
+ }
+
+ .btn-alt {
+
+   border: 1px solid #dfe2e5;
+   padding: 10px 30px;
+
+ }
+
+/*
+
+Home
+
+*/
+.hero {
+  padding: 22px 80px 66px 80px;
+}
