--- a/assests/stylesheets/main.css
+++ b/assests/stylesheets/main.css
@@ -58,3 +58,53 @@ Home
 .hero {
   padding: 22px 80px 66px 80px;
 }
+
+/*
+
+Clearfix
+
+*/
+
+.group:before,
+.group:after {
+
+  content: "";
+  display: table;
+
+}
+
+.group:after {
+  clear: both;
+}
+
+.group {
+  clear: both;
+  *zoom: 1;
+}
+
+/*
+
+Primary header
+
+*/
+
+.logo {
+  border-top: 4px solid #648880;
+  padding: 40px 0 22px 0;
+  float: left;
+}
+
+/*
+
+  Primary Footer
+
+*/
+
+.primary-footer small {
+  float: left;
+}
+
+.primary-footer {
+  padding-bottom: 44px;
+  padding-top: 44px;
+}
