--- a/assests/stylesheets/main.css
+++ b/assests/stylesheets/main.css
@@ -83,7 +83,16 @@ Home
 
 */
 .hero {
+  line-height: 44px;
   padding: 22px 80px 66px 80px;
+}
+
+.hero h2 {
+  font-size: 36px;
+}
+
+.hero p {
+  font-size: 24px;
 }
 
 /*
@@ -119,6 +128,8 @@ Primary header
   border-top: 4px solid #648880;
   padding: 40px 0 22px 0;
   float: left;
+  font-size: 48px;
+  line-height: 44px;
 }
 
 /*
@@ -129,9 +140,79 @@ Primary header
 
 .primary-footer small {
   float: left;
+  font-weight: 400;
 }
 
 .primary-footer {
+  color: #648880;
   padding-bottom: 44px;
   padding-top: 44px;
+  font-size: 14px;
+}
+
+/*
+
+Custom Styles
+
+*/
+
+body {
+  color: #888;
+  font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1, h2, h3, h4 {
+  color: #648880;
+}
+
+h1 {
+  font-size: 36px;
+  line-height: 44px;
+}
+h2 {
+  font-size: 24px;
+  line-height: 44px;
+}
+h3 {
+  font-size: 21px;
+}
+h4 {
+  font-size: 18px;
+}
+h5 {
+  color: #a9b2b9;
+  font-size: 14px;
+  font-weight: 400;
+}
+strong {
+  font-weight: 400;
+}
+cite, em {
+  font-style: italic;
+}
+
+/*
+
+Links
+
+*/
+
+a:hover {
+  color: #a9b2b9;
+}
+a {
+  color: #648880;
+}
+
+.tagline {
+  margin: 66px 0 22px 0;
+}
+
+.primary-nav {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.teaser a:hover h3 {
+  color: #a9b2b9;
 }
