--- a/assests/stylesheets/main.css
+++ b/assests/stylesheets/main.css
@@ -85,6 +85,7 @@ Home
 .hero {
   line-height: 44px;
   padding: 22px 80px 66px 80px;
+  text-align: center;
 }
 
 .hero h2 {
@@ -93,6 +94,7 @@ Home
 
 .hero p {
   font-size: 24px;
+  font-weight: 100;
 }
 
 /*
@@ -129,7 +131,10 @@ Primary header
   padding: 40px 0 22px 0;
   float: left;
   font-size: 48px;
+  font-weight: 100;
+  letter-spacing: .5px;
   line-height: 44px;
+  text-transform: uppercase;
 }
 
 /*
@@ -158,7 +163,7 @@ Custom Styles
 
 body {
   color: #888;
-  font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 h1, h2, h3, h4 {
@@ -183,6 +188,7 @@ h5 {
   color: #a9b2b9;
   font-size: 14px;
   font-weight: 400;
+  text-transform: uppercase;
 }
 strong {
   font-weight: 400;
@@ -202,17 +208,34 @@ a:hover {
 }
 a {
   color: #648880;
+  text-decoration: none;
+}
+p a {
+  border-bottom: 1px solid #dfe2e5;
 }
 
 .tagline {
   margin: 66px 0 22px 0;
+  text-align: right;
 }
 
 .primary-nav {
   font-size: 14px;
   font-weight: 400;
+  letter-spacing: .5px;
+  text-transform: uppercase;
 }
 
 .teaser a:hover h3 {
   color: #a9b2b9;
+}
+
+/*
+
+Navigation
+
+*/
+
+.nav {
+  text-align: right;
 }
