--- a/assests/stylesheets/main.css
+++ b/assests/stylesheets/main.css
@@ -66,8 +66,13 @@
 
  .btn {
    border-radius: 5px;
+   color: #fff;
+   cursor: pointer;
    display: inline-block;
+   font-weight: 400;
+   letter-spacing: .5px;
    margin: 0;
+   text-transform: uppercase;
  }
 
  .btn-alt {
@@ -77,12 +82,18 @@
 
  }
 
+ .btn-alt:hover {
+   background: #fff;
+   color: #648880;
+ }
+
 /*
 
 Home
 
 */
 .hero {
+  color: #fff;
   line-height: 44px;
   padding: 22px 80px 66px 80px;
   text-align: center;
@@ -162,6 +173,7 @@ Custom Styles
 */
 
 body {
+  background: #293f50;
   color: #888;
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -230,6 +242,15 @@ p a {
   color: #a9b2b9;
 }
 
+.primary-header a,
+.primary-footer a {
+  color: #fff;
+}
+
+.primary-header a:hover,
+.primary-footer a:hover {
+  color: #648880;
+}
 /*
 
 Navigation
@@ -238,4 +259,41 @@ Navigation
 
 .nav {
   text-align: right;
+}
+
+/*
+
+Rows
+
+*/
+
+.row {
+  background: #fff;
+  padding: 66px 0 44px 0;
+}
+.row,
+.row-alt {
+  min-width: 960px;
+}
+
+.row-alt {
+  background: #cbe2c1;
+  background: -webkit-linear-gradient(to right, #a1d3d0, #f6f1d3);
+  background: -moz-linear-gradient(to right, #a1d3d0, #f6f1d3);
+  background: linear-gradient(to right, #a1d3d0, #f6f1d3);
+  padding: 44px 0 22px 0;
+}
+
+/*
+
+Leads
+
+*/
+
+.lead {
+  text-align: center;
+}
+.lead p {
+  font-size: 21px;
+  line-height: 33px;
 }
