--- a/assests/stylesheets/main.css
+++ b/assests/stylesheets/main.css
@@ -261,6 +261,16 @@ Navigation
   text-align: right;
 }
 
+.nav li {
+  display: inline-block;
+  margin: 0 10px;
+  vertical-align: top;
+}
+
+.nav li:last-child {
+  margin-right: 0;
+}
+
 /*
 
 Rows
