Add images in assets Add image to index and speaker.html Add image stlying css

--- a/assests/stylesheets/main.css
+++ b/assests/stylesheets/main.css
@@ -242,6 +242,13 @@ p a {
   color: #a9b2b9;
 }
 
+.teaser img {
+  border-radius: 5px;
+  display: block;
+  margin-bottom: 22px;
+  max-width: 100%
+}
+
 .primary-header a,
 .primary-footer a {
   color: #fff;
@@ -306,4 +313,36 @@ Leads
 .lead p {
   font-size: 21px;
   line-height: 33px;
+}
+
+/*
+
+  Speakers
+
+*/
+
+.speaker-info {
+  border: 1px solid #dfe2e5;
+  border-radius: 5px;
+  margin-top: 88px;
+  padding-bottom: 22px;
+  text-align: center;
+}
+
+.speaker {
+  margin-bottom: 44px;
+}
+
+.speaker-info img {
+  border-radius: 50%;
+  height: 130px;
+  margin: -66px 0 22px 0;
+  vertical-align: top;
+}
+
+.speaker-info ul {
+  padding: 0;
+}
+.speaker-info li {
+  list-style: none;
 }
